# SpecTaculo

./: .gitignore  AGENTS.md  LICENSE  README.md  example-task.md  install.ps1  install.sh  pyproject.toml  release-response.json  release.json  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: agent-schema.md
examples/: README.md
examples/GH-42/: PLAN.md  SPEC.md  STATE.json  TASK.md
src/: __init__.py  generate.py  schema.py
src/agents/: spectaculo-execute.yml  spectaculo-intake.yml  spectaculo-plan.yml  spectaculo-review.yml  spectaculo-run.yml  spectaculo-spec.yml  spectaculo-validate.yml
src/templates/: _body.md.j2  claude-skill.md.j2  kimi-skill.md.j2  kiro-agent.json.j2  opencode-agent.md.j2  state.json.j2  task.md.j2
tests/: conftest.py  test_generate.py  test_schema.py  test_templates.py
