[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectaculo"
version = "1.0.0"
description = "Esteira de agentes de IA para Spec Driven Development (SDD)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "JonathanBencke" }]
keywords = ["spec-driven-development", "agents", "ai", "sdd", "spec", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/JonathanBencke/SpecTaculo"
Repository = "https://github.com/JonathanBencke/SpecTaculo"
Issues = "https://github.com/JonathanBencke/SpecTaculo/issues"

[project.scripts]
spectaculo-generate = "src.generate:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
